Fixed spacing for header and all wraps at large tablet size. Fixed image padding on about page - dogs and profile

--- a/_scss/partials/_archive_page.scss
+++ b/_scss/partials/_archive_page.scss
@@ -14,9 +14,9 @@
       &.by-category {
         @include grid-span(4,9);
         text-align: center;
-        margin-top: 2em;
+        margin-top: em(24);
         @include breakpoint($tablet-large) {    
-          margin-top: 1em;
+          margin-top: em(8);
         } 
         @include breakpoint($archive-page) {    
           @include grid-span(5,1);
