--- a/_scss/partials/_images.scss
+++ b/_scss/partials/_images.scss
@@ -38,6 +38,9 @@ img {
     &:hover {
       border-color: darken($jt-green, 10%);
     }
+    @include breakpoint($desktop-large) {
+      padding:em(8);
+    }       
     @include breakpoint($laptop-thirteen) {
       padding:0;
     }
@@ -48,7 +51,7 @@ img {
       border-color: darken($jt-blue, 10%);
     }
     @include breakpoint($desktop-large) {
-      padding:em(16);
+      padding:em(8);
     }   
     @include breakpoint($laptop-thirteen) {
       padding:0;
